[package]
name = "stl_io"
version = "0.4.2"
authors = ["Henning Meyer <tutmann@gmail.com>"]

description = "STL input and output."
repository = "https://github.com/hmeyer/stl_io"
readme = "README.md"
keywords = ["stl", "binary", "ascii", "3d", "mesh"]
license = "GPL-3.0"

[lib]
name = "stl_io"
path = "src/lib.rs"

[dependencies]
byteorder = "1"

[badges]
travis-ci = { repository = "hmeyer/stl_io", branch = "master" }
codecov = { repository = "hmeyer/stl_io", branch = "master", service = "github" }
