[package]
name = "stl_io"
version = "0.8.3"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2021"

description = "STL input and output."
repository = "https://github.com/hmeyer/stl_io"
readme = "README.md"
keywords = ["stl", "binary", "ascii", "3d", "mesh"]
license = "MIT"

[lib]
name = "stl_io"
path = "src/lib.rs"

[dependencies]
byteorder = "1"
float-cmp = "0.9"
