[package]
name = "truescad_openscad"
version = "0.1.0"
authors = ["Henning Meyer <tutmann@gmail.com>"]

[lib]
name = "truescad_openscad"
path = "lib.rs"

[dependencies]
cgmath = "0.12.0"
peg = "=0.3.14"

truescad_types = { path = "../types", version = "0.0.*" }
truescad_primitive = { path = "../primitive", version = "0.0.*" }
