[package]
name = "truescad_primitive"
version = "0.0.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]

[lib]
name = "truescad_primitive"
path = "lib.rs"

[dependencies]
cgmath = "0.12.0"
bencher = "0.1.*"

truescad_types = { path = "../types", version = "0.0.*" }

[[bench]]
name = "objects"
harness = false
