[package]
name = "truescad_primitive"
version = "0.2"
authors = ["Henning Meyer <tutmann@gmail.com>"]

[lib]
name = "truescad_primitive"
path = "lib.rs"

[dependencies]
nalgebra = "0.11"
alga = "0.5"
lazy_static = "0.2.8"
bencher = "0.1.*"

truescad_types = { path = "../types", version = "0.0.*" }

[[bench]]
name = "objects"
harness = false
