[package]
name = "truescad_tessellation"
version = "0.0.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]

[lib]
name = "truescad_tessellation"
path = "lib.rs"

[dependencies]
cgmath = "0.12.0"
nalgebra = "0.10"
rand = "0.3"
time = "0.1"
byteorder = "0.5"

truescad_types = { path = "../types", version = "0.0.*" }
truescad_primitive = { path = "../primitive", version = "0.0.*" }
