[package]
name = "truescad_tessellation"
version = "0.2.0"
authors = ["Henning Meyer <tutmann@gmail.com>"]

[lib]
name = "truescad_tessellation"
path = "lib.rs"

[dependencies]
nalgebra = "0.11"
rand = "0.3"
time = "0.1"
byteorder = "0.5"
rayon = "0.7.*"
lazy_static = "0.2.8"

truescad_types = { path = "../types", version = "0.2.*" }
truescad_primitive = { path = "../primitive", version = "0.2.*" }

[dev-dependencies]
approx = "0.1"
bencher = "0.1.*"


[[bench]]
name = "tessellation"
harness = false
